Late night update.

--- a/GasCalc/App.config
+++ b/GasCalc/App.config
@@ -18,10 +18,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="GasCalcEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=GasCalc;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="GasCalc.Properties.Settings.GasCalcConnectionString"
-      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=GasCalc;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="GasCalc.Properties.Settings.GasCalcConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=GasCalc;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="GasCalcEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=GasCalc;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
